--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 body{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Courier New', Courier, monospace, Helvetica, sans-serif;
     color: darkblue;
 }
