Modificado estilos de la cabecera

--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@ body{
 
 .cabecera{
     background-color: #33c;
-    color: #fff;
+    color: orange;
     margin: 0;
     padding: 0.3em;
     font-weight: bold;
